fix overflow-x

--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -40,6 +40,6 @@
     margin: auto 0;
   }
   .team-image {
-    width: 647px;
+    width: 641px;
   }
 }
